--- a/Transcendence/TSUI/TSUI.vcxproj
+++ b/Transcendence/TSUI/TSUI.vcxproj
@@ -106,6 +106,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="CListCollectionTask.cpp" />
+    <ClCompile Include="CMCIMixer.cpp" />
     <ClCompile Include="CSoundtrackManager.cpp" />
     <ClCompile Include="CTimerRegistry.cpp" />
     <ClCompile Include="CVisualPalette.cpp" />
