--- a/Transcendence/TSE/TSE.vcxproj.filters
+++ b/Transcendence/TSE/TSE.vcxproj.filters
@@ -757,5 +757,11 @@
     <ClCompile Include="CIntegralRotation.cpp">
       <Filter>Source Files\Ships</Filter>
     </ClCompile>
+    <ClCompile Include="CObjectEffectDesc.cpp">
+      <Filter>Source Files\Ships</Filter>
+    </ClCompile>
+    <ClCompile Include="CObjectEffectList.cpp">
+      <Filter>Source Files\Ships</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
