--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -563,110 +563,104 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="Game\Extensions\Debug\AdventureSample.xml">
-      <SubType>Designer</SubType>
-    </Xml>
+    <None Include="Game\Extensions\Debug\AdventureSample.xml" />
     <None Include="Game\Extensions\Debug\DebugCode.xml" />
-    <None Include="Game\Extensions\Debug\DebugShips.xml">
-      <SubType>Designer</SubType>
-    </None>
-    <Xml Include="Game\Extensions\Debug\HighLevelTest.xml">
-      <SubType>Designer</SubType>
-    </Xml>
-    <Xml Include="Game\Extensions\Debug\PerformanceTest.xml" />
+    <None Include="Game\Extensions\Debug\DebugShips.xml" />
+    <None Include="Game\Extensions\Debug\HighLevelTest.xml" />
+    <None Include="Game\Extensions\Debug\PerformanceTest.xml" />
     <None Include="Game\Extensions\Debug\RandomnessTest.xml" />
-    <Xml Include="Game\Extensions\Debug\ShipChangeSample.xml" />
-    <Xml Include="Game\Source\Antarctica.xml" />
-    <Xml Include="Game\Source\AresOrthodoxy.xml" />
-    <Xml Include="Game\Source\BattleArena.xml" />
-    <Xml Include="Game\Source\BattleArenaGladiators.xml" />
-    <Xml Include="Game\Source\BlackMarket.xml" />
-    <Xml Include="Game\Source\CentauriWarlords.xml" />
-    <Xml Include="Game\Source\CharonFortress.xml" />
-    <Xml Include="Game\Source\CharonPirates.xml" />
-    <Xml Include="Game\Source\Code.xml" />
-    <Xml Include="Game\Source\Commonwealth.xml" />
-    <Xml Include="Game\Source\CommonwealthAgricultural.xml" />
-    <Xml Include="Game\Source\CommonwealthFleet.xml" />
-    <Xml Include="Game\Source\CommonwealthMetropolis.xml" />
-    <Xml Include="Game\Source\CommonwealthMilitia.xml" />
-    <Xml Include="Game\Source\CommonwealthMining.xml" />
-    <Xml Include="Game\Source\Compatibility10.xml" />
-    <Xml Include="Game\Source\CoreCode.xml" />
-    <Xml Include="Game\Source\CoreEffects.xml" />
-    <Xml Include="Game\Source\CoreTypes.xml" />
-    <Xml Include="Game\Source\CorporateHierarchy.xml" />
-    <Xml Include="Game\Source\Domina.xml" />
-    <Xml Include="Game\Source\DwargRaiders.xml" />
-    <Xml Include="Game\Source\Elysium.xml" />
-    <Xml Include="Game\Source\EncountersVol01.xml" />
-    <Xml Include="Game\Source\Environments.xml" />
-    <Xml Include="Game\Source\Eridani.xml" />
-    <Xml Include="Game\Source\Groups.xml" />
-    <Xml Include="Game\Source\Heretic.xml" />
-    <Xml Include="Game\Source\HSCompatibility.xml" />
-    <Xml Include="Game\Source\Huari.xml" />
-    <Xml Include="Game\Source\HUD.xml" />
-    <Xml Include="Game\Source\HumanSpaceMap.xml" />
-    <Xml Include="Game\Source\Ice.xml" />
-    <Xml Include="Game\Source\Iocrym.xml" />
-    <Xml Include="Game\Source\KateMorgental.xml" />
-    <Xml Include="Game\Source\KorolovShipping.xml" />
-    <Xml Include="Game\Source\Luminous.xml" />
-    <Xml Include="Game\Source\Metallic.xml" />
-    <Xml Include="Game\Source\Mining.xml" />
-    <Xml Include="Game\Source\MiscItems.xml" />
-    <Xml Include="Game\Source\Neurohack.xml" />
-    <Xml Include="Game\Source\OutlawMiners.xml" />
-    <Xml Include="Game\Source\PlayerShips.xml" />
-    <Xml Include="Game\Source\PointJuno.xml" />
-    <Xml Include="Game\Source\Primordial.xml" />
-    <Xml Include="Game\Source\Rasiermesser.xml" />
-    <Xml Include="Game\Source\Ringers.xml" />
-    <Xml Include="Game\Source\Rocky.xml" />
-    <Xml Include="Game\Source\RogueFleet.xml" />
-    <Xml Include="Game\Source\RPGAnalyzers.xml" />
-    <Xml Include="Game\Source\RPGAutons.xml" />
-    <Xml Include="Game\Source\RPGAuxDevices.xml" />
-    <Xml Include="Game\Source\RPGBehaviors.xml" />
-    <Xml Include="Game\Source\RPGCharacters.xml" />
-    <Xml Include="Game\Source\RPGCode.xml" />
-    <Xml Include="Game\Source\RPGCompatibility.xml" />
-    <Xml Include="Game\Source\RPGDockScreens.xml" />
-    <Xml Include="Game\Source\RPGMissions.xml" />
-    <Xml Include="Game\Source\RPGPlayer.xml" />
-    <Xml Include="Game\Source\RPGShipScreens.xml" />
-    <Xml Include="Game\Source\RPGTypes.xml" />
-    <Xml Include="Game\Source\RPGWingmen.xml" />
-    <Xml Include="Game\Source\SistersOfDomina.xml" />
-    <Xml Include="Game\Source\Stargates.xml" />
-    <Xml Include="Game\Source\StarsOfThePilgrim.xml" />
-    <Xml Include="Game\Source\StarSystems.xml" />
-    <Xml Include="Game\Source\StdArmor.xml" />
-    <Xml Include="Game\Source\StdAutons.xml" />
-    <Xml Include="Game\Source\StdDevices.xml" />
-    <Xml Include="Game\Source\StdDockScreens.xml" />
-    <Xml Include="Game\Source\StdEffects.xml" />
-    <Xml Include="Game\Source\StdExplosions.xml" />
-    <Xml Include="Game\Source\StdFuel.xml" />
-    <Xml Include="Game\Source\StdPlayerShips.xml" />
-    <Xml Include="Game\Source\StdShields.xml" />
-    <Xml Include="Game\Source\StdSovereigns.xml" />
-    <Xml Include="Game\Source\StdSystems.xml" />
-    <Xml Include="Game\Source\StdTypes.xml" />
-    <Xml Include="Game\Source\StdUnknownItems.xml" />
-    <Xml Include="Game\Source\StdWeapons.xml" />
-    <Xml Include="Game\Source\StKatharines.xml" />
-    <Xml Include="Game\Source\SungSlavers.xml" />
-    <Xml Include="Game\Source\Teratons.xml" />
-    <Xml Include="Game\Source\Tinkers.xml" />
-    <Xml Include="Game\Source\Transcendence.xml" />
-    <Xml Include="Game\Source\UniverseCompatibility.xml" />
-    <Xml Include="Game\Source\UniverseEffects.xml" />
-    <Xml Include="Game\Source\UrakWarlords.xml" />
-    <Xml Include="Game\Source\UsefulItems.xml" />
-    <Xml Include="Game\Source\Volcanic.xml" />
-    <Xml Include="Game\Source\Worlds.xml" />
+    <None Include="Game\Extensions\Debug\ShipChangeSample.xml" />
+    <None Include="Game\Source\Antarctica.xml" />
+    <None Include="Game\Source\AresOrthodoxy.xml" />
+    <None Include="Game\Source\BattleArena.xml" />
+    <None Include="Game\Source\BattleArenaGladiators.xml" />
+    <None Include="Game\Source\BlackMarket.xml" />
+    <None Include="Game\Source\CentauriWarlords.xml" />
+    <None Include="Game\Source\CharonFortress.xml" />
+    <None Include="Game\Source\CharonPirates.xml" />
+    <None Include="Game\Source\Code.xml" />
+    <None Include="Game\Source\Commonwealth.xml" />
+    <None Include="Game\Source\CommonwealthAgricultural.xml" />
+    <None Include="Game\Source\CommonwealthFleet.xml" />
+    <None Include="Game\Source\CommonwealthMetropolis.xml" />
+    <None Include="Game\Source\CommonwealthMilitia.xml" />
+    <None Include="Game\Source\CommonwealthMining.xml" />
+    <None Include="Game\Source\Compatibility10.xml" />
+    <None Include="Game\Source\CoreCode.xml" />
+    <None Include="Game\Source\CoreEffects.xml" />
+    <None Include="Game\Source\CoreTypes.xml" />
+    <None Include="Game\Source\CorporateHierarchy.xml" />
+    <None Include="Game\Source\Domina.xml" />
+    <None Include="Game\Source\DwargRaiders.xml" />
+    <None Include="Game\Source\Elysium.xml" />
+    <None Include="Game\Source\EncountersVol01.xml" />
+    <None Include="Game\Source\Environments.xml" />
+    <None Include="Game\Source\Eridani.xml" />
+    <None Include="Game\Source\Groups.xml" />
+    <None Include="Game\Source\Heretic.xml" />
+    <None Include="Game\Source\HSCompatibility.xml" />
+    <None Include="Game\Source\Huari.xml" />
+    <None Include="Game\Source\HUD.xml" />
+    <None Include="Game\Source\HumanSpaceMap.xml" />
+    <None Include="Game\Source\Ice.xml" />
+    <None Include="Game\Source\Iocrym.xml" />
+    <None Include="Game\Source\KateMorgental.xml" />
+    <None Include="Game\Source\KorolovShipping.xml" />
+    <None Include="Game\Source\Luminous.xml" />
+    <None Include="Game\Source\Metallic.xml" />
+    <None Include="Game\Source\Mining.xml" />
+    <None Include="Game\Source\MiscItems.xml" />
+    <None Include="Game\Source\Neurohack.xml" />
+    <None Include="Game\Source\OutlawMiners.xml" />
+    <None Include="Game\Source\PlayerShips.xml" />
+    <None Include="Game\Source\PointJuno.xml" />
+    <None Include="Game\Source\Primordial.xml" />
+    <None Include="Game\Source\Rasiermesser.xml" />
+    <None Include="Game\Source\Ringers.xml" />
+    <None Include="Game\Source\Rocky.xml" />
+    <None Include="Game\Source\RogueFleet.xml" />
+    <None Include="Game\Source\RPGAnalyzers.xml" />
+    <None Include="Game\Source\RPGAutons.xml" />
+    <None Include="Game\Source\RPGAuxDevices.xml" />
+    <None Include="Game\Source\RPGBehaviors.xml" />
+    <None Include="Game\Source\RPGCharacters.xml" />
+    <None Include="Game\Source\RPGCode.xml" />
+    <None Include="Game\Source\RPGCompatibility.xml" />
+    <None Include="Game\Source\RPGDockScreens.xml" />
+    <None Include="Game\Source\RPGMissions.xml" />
+    <None Include="Game\Source\RPGPlayer.xml" />
+    <None Include="Game\Source\RPGShipScreens.xml" />
+    <None Include="Game\Source\RPGTypes.xml" />
+    <None Include="Game\Source\RPGWingmen.xml" />
+    <None Include="Game\Source\SistersOfDomina.xml" />
+    <None Include="Game\Source\Stargates.xml" />
+    <None Include="Game\Source\StarsOfThePilgrim.xml" />
+    <None Include="Game\Source\StarSystems.xml" />
+    <None Include="Game\Source\StdArmor.xml" />
+    <None Include="Game\Source\StdAutons.xml" />
+    <None Include="Game\Source\StdDevices.xml" />
+    <None Include="Game\Source\StdDockScreens.xml" />
+    <None Include="Game\Source\StdEffects.xml" />
+    <None Include="Game\Source\StdExplosions.xml" />
+    <None Include="Game\Source\StdFuel.xml" />
+    <None Include="Game\Source\StdPlayerShips.xml" />
+    <None Include="Game\Source\StdShields.xml" />
+    <None Include="Game\Source\StdSovereigns.xml" />
+    <None Include="Game\Source\StdSystems.xml" />
+    <None Include="Game\Source\StdTypes.xml" />
+    <None Include="Game\Source\StdUnknownItems.xml" />
+    <None Include="Game\Source\StdWeapons.xml" />
+    <None Include="Game\Source\StKatharines.xml" />
+    <None Include="Game\Source\SungSlavers.xml" />
+    <None Include="Game\Source\Teratons.xml" />
+    <None Include="Game\Source\Tinkers.xml" />
+    <None Include="Game\Source\Transcendence.xml" />
+    <None Include="Game\Source\UniverseCompatibility.xml" />
+    <None Include="Game\Source\UniverseEffects.xml" />
+    <None Include="Game\Source\UrakWarlords.xml" />
+    <None Include="Game\Source\UsefulItems.xml" />
+    <None Include="Game\Source\Volcanic.xml" />
+    <None Include="Game\Source\Worlds.xml" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
