--- a/Transcendence/TransData/TransData.vcxproj
+++ b/Transcendence/TransData/TransData.vcxproj
@@ -319,7 +319,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Xml Include="..\Game\TransData.xml" />
+    <Xml Include="..\Game\TransData.xml">
+      <SubType>Designer</SubType>
+    </Xml>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
