--- a/Transcendence/Transcendence.vcxproj.filters
+++ b/Transcendence/Transcendence.vcxproj.filters
@@ -451,9 +451,6 @@
     <None Include="Game\Source\CorporateHierarchy.xml">
       <Filter>XML Files\Human Space Library</Filter>
     </None>
-    <None Include="Game\Source\Domina.xml">
-      <Filter>XML Files\Human Space Library</Filter>
-    </None>
     <None Include="Game\Source\DwargRaiders.xml">
       <Filter>XML Files\Human Space Library</Filter>
     </None>
@@ -661,10 +658,27 @@
     <None Include="Game\Source\Worlds.xml">
       <Filter>XML Files\Universe Library</Filter>
     </None>
+    <None Include="Game\Source\Domina.xml">
+      <Filter>XML Files\Human Space Library</Filter>
+    </None>
+    <None Include="Game\Source\BenedictStoryArc.xml">
+      <Filter>XML Files\Part I</Filter>
+    </None>
+    <None Include="Game\Source\BenedictIntro.xml">
+      <Filter>XML Files\Part I</Filter>
+    </None>
+    <None Include="Game\Source\Benedict00.xml">
+      <Filter>XML Files\Part I</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Transcendence.rc">
       <Filter>Resources</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Xml Include="Game\Source\Benedict01.xml">
+      <Filter>XML Files\Part I</Filter>
+    </Xml>
   </ItemGroup>
 </Project>
