--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -756,6 +756,9 @@
   <ItemGroup>
     <None Include="Game\Source\Benedict01.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Game\Source\Benedict02.xml" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
